Added GA code & improved some links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="google-site-verification" content="6UH_pVThXevHaoXXQ5PuSz6AbJAL49oDxlyT9VM5MFI" />
     <title>GitHub-tech.GitHub.io by GitHub-Tech</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -16,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>GitHub-tech.GitHub.io</h1>
-        <p>GitHub Pages site for unofficial http://github.tech</p>
+        <p>GitHub Pages site for unofficial <a href="http://www.github.tech">GitHub Tech</a></p>
 
 
         <p class="view"><a href="https://github.com/GitHub-Tech">View My GitHub Profile</a></p>
@@ -40,7 +41,7 @@ Developers, Designers, Students and any one how wants to learn about Version Con
 <p>Anyone can contribute to the blog. Please read the contributing guide before contacting us for contributions.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Not associated with GitHub.com <a href="http://www.github.tech">Connect</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
