--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>GitHub-tech.GitHub.io</h1>
+        <h1>Github Tech</h1>
         <p>GitHub Pages site for unofficial <a href="http://www.github.tech">GitHub Tech</a></p>
 
 
