--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="google-site-verification" content="6UH_pVThXevHaoXXQ5PuSz6AbJAL49oDxlyT9VM5MFI" />
-    <title>GitHub-tech.GitHub.io by GitHub-Tech</title>
+    <title>Github Tech</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>Github Tech</h1>
-        <p>GitHub Pages site for unofficial <a href="http://www.github.tech">GitHub Tech</a></p>
+        <p>GitHub Pages site for unofficial <a href="http://www.github.tech">Github Tech</a></p>
 
 
         <p class="view"><a href="https://github.com/GitHub-Tech">View My GitHub Profile</a></p>
